--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" media="screen" href="css/reset.css" />
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
-<body>
+<body style ="background-color:grey;">
   <!--creating the form--> 
-  <form> 
+  <form action="/action_page.php" method="get" autocomplete="on"> 
     <label for="name">Name:</label>
     <br> 
     <input type="text" id="name">
