changing method for form

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body style ="background-color:grey;">
   <!--creating the form--> 
-  <form action="/action_page.php" target="_self" method="get" autocomplete="on"> 
+  <form action="/action_page.php" target="_self" method="POST" autocomplete="on"> 
     <label for="name">Name:</label>
     <br> 
     <input type="text" id="name">
