changing background color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" media="screen" href="css/reset.css" />
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
-<body style ="background-color:grey;">
+<body style ="background-color:pink;">
  <h1>Lab 2: Form Semantics and Normalized Styles</h1>
   <!--creating the form--> 
   <form action="/action_page.php" target="_self" method="POST" autocomplete="on"> 
