--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
 <body style ="background-color:pink;">
- <h1>Lab 2: Form Semantics and Normalized Styles</h1>
+  <h1><strong>Lab 2: Form Semantics and Normalized Styles</strong></h1>
  <hr> 
   <!--creating the form--> 
   <form action="/action_page.php" target="_self" method="POST" autocomplete="on"> 
