--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <title>Lab 2</title>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
   <link rel="stylesheet" media="screen" href="css/reset.css" />
   <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
 <body style ="background-color:pink;">
-  <h1><strong>Lab 2: Form Semantics and Normalized Styles</strong></h1>
+  <h1><b>Lab 2: Form Semantics and Normalized Styles</b></h1>
  <hr> 
   <!--creating the form--> 
-  <form action="/action_page.php" target="_self" method="POST" autocomplete="on"> 
+  <form action="/action_page.php" method="POST" autocomplete="on"> 
     <label for="name">Name:</label>
     <br> 
     <input type="text" id="name">
