--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
   <title>Lab 2</title>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
   <link rel="stylesheet" media="screen" href="css/reset.css" />
-  <link rel="stylesheet" media="screen" href="css/screen.css" />
+  <link rel="stylesheet" media="screen" href="css/style.css" />
 </head>
-<body style ="background-color:pink;">
-  <h1><b>Lab 2: Form Semantics and Normalized Styles</b></h1>
- <hr> 
-  <!--creating the form--> 
-  <form action="/action_page.php" method="POST" autocomplete="on"> 
+
+<body>
+
+<header>
+<h1>Lab 2: Form Semantics and Normalized Styles</h1>
+</header>
+
+<form action="/action_page.php" method="POST" autocomplete="on"> 
+<fieldset>
+		 <!--creating the form--> 
     <label for="name">Name:</label>
     <br> 
     <input type="text" id="name">
@@ -30,7 +35,8 @@
     <br>
     <!---creating submit button--->
      <input type="submit" value="Submit">
-   </form>
     <!---form end---->
+</fieldset>
+</form>
 </body>
 </html>
