--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" media="screen" href="css/style.css" />
 </head>
 
-<body style="background-color:pink;">>
-
+<body style="background-color:pink;">
 <header>
 <h1>Lab 2: Form Semantics and Normalized Styles</h1>
 <hr>
