--- a/index.html
+++ b/index.html
@@ -16,17 +16,25 @@
 
 <form action="/action_page.php" method="POST" autocomplete="on"> 
 <fieldset>
-		 <!--creating the form--> 
+<!--creating the form--> 
+<div>
     <label for="name">Name:</label> 
     <input type="text" id="name">
+</div>
+<div>
     <label for="email">Email:</label> 
     <input type="email" id="email">
+</div>
     <label for="phone">Phone Number:</label>
     <input type="tel" id="phone">
+<div>
     <label for="birthday">Date of Birth:</label>
     <input type="date" id="birthday">
+</div>
+<div>
     <!---creating submit button--->
      <input type="submit" value="Submit">
+</div>
     <!---form end---->
 </fieldset>
 </form>
