updating commets within code

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <input type="date" id="birthday">
 </div>
 <div>
-    <!---creating submit button--->
+    <!--creating submit button-->
      <input type="submit" value="Submit">
 </div>
-    <!---form end---->
+    <!--form end-->
 </fieldset>
 </form>
 </body>
