taking css out of html code, moving to css

--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
   <link rel="stylesheet" media="screen" href="css/reset.css" />
   <link rel="stylesheet" media="screen" href="css/style.css" />
 </head>
-
-<body style="background-color:pink;">
-<header>
-<h1>Lab 2: Form Semantics and Normalized Styles</h1>
-<hr>
-</header>
+<body>
 
 <form action="/action_page.php" method="POST" autocomplete="on"> 
 <fieldset>
 <!--creating the form--> 
+<legend>Lab 2: Form Semantics and Normalized Styles</legend>
 <div>
     <label for="name">Name:</label> 
     <input type="text" id="name">
@@ -31,10 +27,8 @@
     <label for="birthday">Date of Birth:</label>
     <input type="date" id="birthday">
 </div>
-<div>
     <!--creating submit button-->
      <input type="submit" value="Submit">
-</div>
     <!--form end-->
 </fieldset>
 </form>
