--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <input type="date" id="birthday">
 </div>
     <!--creating submit button-->
-     <input type="submit" value="Submit">
+     <input type="submit" value="Submit" id="submitbutton">
     <!--form end-->
 </fieldset>
 </form>
